# Arash

./: .gitignore  LICENSE  README.md  debug_build_all.sh  light_header  release_build_all.sh
00_common/: ast.hpp  common_cmake.txt  debug.cpp  debug.hpp  helper.cpp  helper.hpp  protocol.hpp  serializer.cpp  serializer.hpp  utils.cpp  utils.hpp
01_streamer/: debug_build.sh  release_build.sh  streamer-actuator.cpp  streamer-actuator.hpp  streamer-interface.hpp  streamer-main.cpp  streamer-process.cpp
01_streamer/cmake/: CMakeLists.txt
02_tokenizer/: debug_build.sh  release_build.sh  tokenizer-actuator.cpp  tokenizer-actuator.hpp  tokenizer-interface.hpp  tokenizer-main.cpp
02_tokenizer/cmake/: CMakeLists.txt
03_blocker/: blocker-actuator.cpp  blocker-actuator.hpp  blocker-interface.hpp  blocker-main.cpp  debug_build.sh  release_build.sh
03_blocker/cmake/: CMakeLists.txt
04_abstractor-init/: abstractor-init-actuator.cpp  abstractor-init-actuator.hpp  abstractor-init-interface.hpp  abstractor-init-main.cpp  debug_build.sh  release_build.sh
04_abstractor-init/cmake/: CMakeLists.txt
04_abstractor-init/details/: abstractor-expression.cpp  abstractor-expression.hpp  abstractor-stmt-expression.cpp  abstractor-stmt-expression.hpp  abstractor-stmt-jmp.cpp  abstractor-stmt-jmp.hpp  abstractor-stmt-var-decl.cpp  abstractor-stmt-var-decl.hpp
05_pertainer/: debug_build.sh  pertainer-actuator.cpp  pertainer-actuator.hpp  pertainer-interface.hpp  pertainer-main.cpp  release_build.sh
05_pertainer/cmake/: CMakeLists.txt
06_injector/: debug_build.sh  injector-actuator.cpp  injector-actuator.hpp  injector-interface.hpp  injector-main.cpp  release_build.sh
06_injector/cmake/: CMakeLists.txt
07_resolver/: debug_build.sh  release_build.sh  resolver-actuator.cpp  resolver-actuator.hpp  resolver-interface.hpp  resolver-main.cpp
07_resolver/cmake/: CMakeLists.txt
08_optimizer/: debug_build.sh  optimizer-actuator.cpp  optimizer-actuator.hpp  optimizer-interface.hpp  optimizer-main.cpp  release_build.sh
08_optimizer/cmake/: CMakeLists.txt
09_reformer/: debug_build.sh  reformer-actuator.cpp  reformer-actuator.hpp  reformer-interface.hpp  reformer-main.cpp  release_build.sh
09_reformer/cmake/: CMakeLists.txt
10_codegen/llvm/: codegen-actuator.cpp  codegen-actuator.hpp  codegen-interface.hpp  codegen-main.cpp  debug_build.sh  release_build.sh
10_codegen/llvm/cmake/: CMakeLists.txt
example/: crc_calculator.ara  crc_calculator.cpp  hello_world_printf.ara  hello_world_puts.ara  import.ara  primes.ara  primes_algo.ara  sample.ara  simple_sum.ara
languages/: language-en.cpp  language-interface.hpp
libs/: easytext.cpp  easytext.hpp  filesystem.cpp  filesystem.hpp  profiler.cpp  profiler.hpp
resources/editors/sublime-text3/: arash.sublime-syntax
test-cases/: install_req.sh  run_tests.py  test_all.sh
test-cases/000001-streamer/: test.py
test-cases/000002-splitter/: test.py
tools/ast_browser/: ast_browser-main.cpp  debug_build.sh  release_build.sh
tools/ast_browser/cmake/: CMakeLists.txt
tools/ast_browser/html_resources/: main.css  main.js
tools/tools-common/html/: html.cpp  html.hpp
